spices/ecs/tests/errors/sized-defsystem-undeclared-write.tur
;; E2c slice 8 negative regression -- a sized-defsystem body that
;; calls set-Vel! without declaring Vel in :writes has no
;; Vel-write-cap in scope, so the call fails to elaborate. Sized-side
;; counterpart of tests/errors/defsystem-set-undeclared.tur; together
;; they prove the cap-gating guarantee holds on both world surfaces.
;;
;; Expected: unbound symbol 'Vel-write-cap' at the set-Vel! call.

(defmodule sized_defsystem_undeclared_write_test
  (export)

(import ecs/sized-storage :refer [SizedDense])
(import ecs/sized-world   :refer [sized-defworld
                                   sized-defcomponent-accessors
                                   sized-defsystem])
(import ecs/cap           :refer [WriteCap ReadCap
                                   make-write-cap make-read-cap use-cap!])

(defopaque Pos :int)
(defopaque Vel :int)

(sized-defworld GameWorld [Pos Vel])
(sized-defcomponent-accessors GameWorld Pos)
(sized-defcomponent-accessors GameWorld Vel)

(def Pos-cid 0)
(def Vel-cid 1)

(sized-defsystem rogue GameWorld
  []                 ;; :reads
  [Pos]              ;; :writes -- Vel is NOT declared
  ;; ERROR: Vel-write-cap not in scope (only Pos-write-cap is bound).
  (set-Vel! Vel-write-cap w 0 (:: 1 :Vel)))

) ;; end defmodule sized_defsystem_undeclared_write_test
